    this method has a default implementation.
! BitmapDataExtensions class:
  ! The ToBitmap/BeginToBitmap/EndToBitmap/ToBitmapAsync methods are now in the ReadableBitmapDataExtensions class
    of the KGySoft.Drawing package. When recompiling C# sources, this is not a breaking change if you use the
    KGySoft.Drawing package and use these methods as extensions (without the class name).
  + New Clone/CopyTo/DrawInto/Clear/TransformColors/Quantize/Dither overloads with IAsyncContext parameter.
! IQuantizingSession interface:
  ! New IsGrayscale property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this property returns false if not implemented.
+ New KnownPixelFormat enum. The names of the actual formats are compatible with System.Drawing.Imaging.PixelFormat
  but some of them have different underlying values. Use the ToPixelFormat extension from KGySoft.Drawing to convert
  it to a System.Drawing.Imaging.PixelFormat.
+ New IBitmapDataRowMovable, IReadableBitmapDataRowMovable, IWritableBitmapDataRowMovable and
  IReadWriteBitmapDataRowMovable interfaces
+ New KnownPixelFormatExtensions class
+ Palette class:
  + New public constructor to create a new Palette from an existing one with different back color and alpha
    threshold values.
  + The IsGrayscale and HasAlpha properties have been made public.
+ PixelFormatInfo struct:
  + New public constructor from KnownPixelFormat
  + New IsCustomFormat property
  + Implementing IEquatable<PixelFormatInfo>
  + Equality and inequality operators are overloaded
  + New ToKnownPixelFormat method
+ New QuantizerExtensions class to initialize a quantizing session asynchronously (.NET Framework 4.0 and above)
+ New DithererExtensions class to initialize a dithering session asynchronously (.NET Framework 4.0 and above)

NOTE: See the history of older versions at the following link:
https://github.com/koszeggy/KGySoft.Drawing/blob/master/Specific/GdiPlus/KGySoft.Drawing/changelog.txt